# ChangeLog for dev-ruby/bourbon
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*bourbon-3.1.6 (09 May 2013)

  09 May 2013; Hans de Graaff <graaff@gentoo.org> +bourbon-3.1.6.ebuild:
  Version bump.

*bourbon-3.1.2.1 (11 Apr 2013)

  11 Apr 2013; Hans de Graaff <graaff@gentoo.org> -bourbon-3.1.2.ebuild,
  +bourbon-3.1.2.1.ebuild:
  Version bump.

*bourbon-3.1.2 (10 Apr 2013)

  10 Apr 2013; Hans de Graaff <graaff@gentoo.org> +bourbon-3.1.2.ebuild,
  +metadata.xml:
  Initial import.
