@@ -1,2 +1,3 @@
 DIST bourbon-3.1.2.1.gem 25088 SHA256 0452c9ab773bc51ce9813deb289102809695a1f271730d1183a06d9e060601fe SHA512 44ee48190f2b6a39e797e6b7d4967643354f1b6edcda203ed6e0b9f767430e4c8ac861af11c82e8ea3a8b3ad7c6b6072390bc3c0a5310eedc55662dda5db8db6 WHIRLPOOL 81f3627c59c203742e649371953149e30899d520ba583cba3973472e472bbf57379e764823e4cf5ede615897c9a642429077c12d830c9281fa679a63bba6419a
 DIST bourbon-3.1.6.gem 24064 SHA256 7d1e2e07f1399e5bda518f9219a45a1aea49d065c250f7b19c318131298dfd44 SHA512 bfe5a5e7017dd456ef886fe11ad89f3cfc25f03b22e79a678603ada7f85872bfe573d2688a4ae67bb46d00abbe1f406c037c5bbb49ea4cc88541787325adf57f WHIRLPOOL 35da1702bf4e5c51dbfe6c33f5b2df033678d7de736ded458b98730164b52f84868d93f6b72d2a692a0a344e63ea7f26b9562c9f8f3dfb1665a51092d5c2fa0c
+DIST bourbon-3.1.8.gem 24576 SHA256 23bf657586bf072f3dd9c479c2c4c862d25dda0c2a4ec31151f740d95b57b790 SHA512 e285d88d8d933453027895f36d5f56a99fdab32caa2512fd4a0e7f69b7790594d4ea33f63cca4897598a1cbd6e93b1f624386cf73baed7ab3eff8380bf2e37d6 WHIRLPOOL 5474d18fcfe3fd7c48c371d3aef88b30ba72baa217fdeea904b509d7a36e39f2215a8816c469425d299a7aeca227bf822b8f2f87d0ba56bbc7235c5cde5dfa36
