@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*bourbon-3.1.8 (21 Jun 2013)
+
+  21 Jun 2013; Hans de Graaff <graaff@gentoo.org> +bourbon-3.1.8.ebuild:
+  Version bump.
+
 *bourbon-3.1.6 (09 May 2013)
 
   09 May 2013; Hans de Graaff <graaff@gentoo.org> +bourbon-3.1.6.ebuild:
